[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Elements/Adder8Bit/Adder8Bit.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Base/Connector/Out.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Base/Element/Element.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Elements/Adder8Bit/adder_8_bit_off.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Base/Element/ElementShader.gdshader" type="Shader" id=5]
[ext_resource path="res://Scenes/Base/Connector/In.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Base/Element/DissolveTexture.tres" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 384, 64 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/is_dissolve = false
shader_param/outline_width = 1.0
shader_param/outline_color = null
shader_param/is_outlined = false
shader_param/dissolveNoise = ExtResource( 7 )

[node name="Adder8Bit" instance=ExtResource( 3 )]
script = ExtResource( 1 )
type = 18

[node name="CollisionShape2D" parent="FirstArea" index="0"]
position = Vector2( 0, 30 )
rotation = 2.67035
shape = SubResource( 3 )

[node name="Sprite" parent="." index="1"]
material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="Out" parent="Connectors" index="0" instance=ExtResource( 2 )]
position = Vector2( 207, -12 )

[node name="Out2" parent="Connectors" index="1" instance=ExtResource( 2 )]
position = Vector2( 167, 9 )

[node name="Out3" parent="Connectors" index="2" instance=ExtResource( 2 )]
position = Vector2( 126, 29 )

[node name="Out4" parent="Connectors" index="3" instance=ExtResource( 2 )]
position = Vector2( 86, 51 )

[node name="Out5" parent="Connectors" index="4" instance=ExtResource( 2 )]
position = Vector2( 44, 69 )

[node name="Out6" parent="Connectors" index="5" instance=ExtResource( 2 )]
position = Vector2( 6, 89 )

[node name="Out7" parent="Connectors" index="6" instance=ExtResource( 2 )]
position = Vector2( -33, 109 )

[node name="Out8" parent="Connectors" index="7" instance=ExtResource( 2 )]
position = Vector2( -74, 130 )

[node name="OutC" parent="Connectors" index="8" instance=ExtResource( 2 )]
position = Vector2( -337, 191 )

[node name="In" parent="Connectors" index="9" instance=ExtResource( 6 )]
position = Vector2( 242, -157 )

[node name="InC" parent="Connectors" index="10" instance=ExtResource( 6 )]
position = Vector2( 322, -140 )

[node name="In2" parent="Connectors" index="11" instance=ExtResource( 6 )]
position = Vector2( 203, -136 )

[node name="In3" parent="Connectors" index="12" instance=ExtResource( 6 )]
position = Vector2( 162, -117 )

[node name="In4" parent="Connectors" index="13" instance=ExtResource( 6 )]
position = Vector2( 121, -96 )

[node name="In5" parent="Connectors" index="14" instance=ExtResource( 6 )]
position = Vector2( 81, -75 )

[node name="In6" parent="Connectors" index="15" instance=ExtResource( 6 )]
position = Vector2( 41, -57 )

[node name="In7" parent="Connectors" index="16" instance=ExtResource( 6 )]
position = Vector2( 1, -38 )

[node name="In8" parent="Connectors" index="17" instance=ExtResource( 6 )]
position = Vector2( -38, -15 )

[node name="In9" parent="Connectors" index="18" instance=ExtResource( 6 )]
position = Vector2( -78, 4 )

[node name="In10" parent="Connectors" index="19" instance=ExtResource( 6 )]
position = Vector2( -119, 24 )

[node name="In11" parent="Connectors" index="20" instance=ExtResource( 6 )]
position = Vector2( -158, 44 )

[node name="In12" parent="Connectors" index="21" instance=ExtResource( 6 )]
position = Vector2( -198, 64 )

[node name="In13" parent="Connectors" index="22" instance=ExtResource( 6 )]
position = Vector2( -238, 84 )

[node name="In14" parent="Connectors" index="23" instance=ExtResource( 6 )]
position = Vector2( -277, 105 )

[node name="In15" parent="Connectors" index="24" instance=ExtResource( 6 )]
position = Vector2( -318, 124 )

[node name="In16" parent="Connectors" index="25" instance=ExtResource( 6 )]
position = Vector2( -359, 145 )
